# homeassistant-emby

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh  postStartCommand.sh
.github/: labels.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_feature_request.yml  3_connection_issue.yml  4_help_question.yml  5_compatibility_issue.yml  config.yml
.github/workflows/: hacs-validation.yml  hassfest.yml  issue-triage.yml  pr-review.yml  pyright.yml  release.yml  stale.yml  test-and-coverage.yml  test.yml
components/emby/: __init__.py  api.py  media_player.py
config/: .gitignore  configuration.yaml  home-assistant.log.1
config/custom_components/: __init__.py  emby
custom_components/emby/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  entity.py  exceptions.py  (+4 more)
devtools/: emby_harness.py  hass_emby_harness.py
docs/: ARCHITECTURE.md  AUTOMATIONS.md  COMPARISON_MATRIX.md  CONFIGURATION.md  EFFICIENCY.md  INSTALLATION.md  KNOWN_ISSUES.md  README.md  SERVICES.md  TROUBLESHOOTING.md  phase-1-tasks.md  phase-10-tasks.md  phase-11-tasks.md  phase-12-patch-tasks.md  phase-12-tasks.md  phase-13-tasks.md  phase-14-tasks.md  phase-15-tasks.md  phase-16-tasks.md  phase-17-tasks.md  phase-18-tasks.md  phase-2-tasks.md  phase-21-tasks.md  phase-3-tasks.md  phase-4-tasks.md  phase-5-tasks.md  phase-6-tasks.md  phase-7-tasks.md  phase-8-tasks.md  phase-9-tasks.md  roadmap.md
scripts/: develop  setup  test_browse_structure.py  test_live_api.py  test_websocket.py
tests/: conftest.py  test_always_update_false.py  test_api.py  test_api_activity.py  test_api_admin.py  test_api_collections.py  test_api_devices.py  test_api_discovery.py  test_api_live.py  test_api_livetv.py  test_api_metrics.py  test_api_persons.py  test_api_playback_info.py  test_api_sensor_methods.py  test_api_tags.py  test_batch_user_counts.py  test_binary_sensor.py  test_binary_sensor_livetv.py  test_browse.py  test_browse_letter_helper.py  test_browse_persons.py  test_browse_tags.py  test_button.py  test_cache.py  test_config_flow.py  test_config_flow_duplicate.py  test_config_options.py  test_configurable_polling.py  test_const.py  test_const_activity.py  test_const_devices.py  test_const_phase2.py  test_coordinator.py  test_coordinator_activity.py  test_coordinator_discovery.py  test_coordinator_playback_tracking.py  test_coordinator_resilience.py  test_coordinator_sensors.py  test_coverage_gaps.py  test_device_condition.py  (+52 more)
(+124 files in other folders)
